Fixed dark-mode issue, unreadable text

--- a/css/01-setup/dark-mode.scss
+++ b/css/01-setup/dark-mode.scss
@@ -127,5 +127,19 @@
                 background-image: url("#{$file-path}img/chevron-up-darkmode.svg");
             }
         }
+
+        svg {
+            background-color: black;
+            color: white;
+        }
+
+        line[stroke-opacity] {
+            color: white;
+        }
+
+        .content-block table tr th {
+            background: transparent;
+            color: inherit;
+        }
     }
 }
